add referecence to the datasample directory

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,12 @@ dependencies {
     
 }
 
+sourceSets {
+   test {
+    resources.srcDir file('src/test/java')
+  }
+}
+
 test {
-    useJUnit()
+       useJUnit()
 }
