--- a/python_workflow/data/product_configs/4xmm.mango.config.json
+++ b/python_workflow/data/product_configs/4xmm.mango.config.json
@@ -10,17 +10,17 @@
 				"equinox": null
 			},
 			"position": {
-				"longitude": "_ra_146",
-				"latitude": "_dec_147",
+				"longitude": "@_ra_146",
+				"latitude": "@_dec_147",
 				"unit": "deg"
 			},
 			"errors": {
 				"systematic": {
-					"value": "_syserrcc_152",
+					"value": "@_syserrcc_152",
 					"unit": "arcsec"
 				},
 				"random": {
-					"value": "_poserr_148",
+					"value": "@_poserr_148",
 					"unit": "arcsec"
 				}
 			}
@@ -33,16 +33,53 @@
 				"frame": "EB1"
 			},
 			"luminosity": {
-				"luminosity": "_ep_1_flux_166",
+				"luminosity": "@_ep_1_flux_166",
 				"unit": "erg/cm2/sec"
 			},
 			"errors": {
 				"random": {
-					"value": "_ep_1_flux_err_167",
+					"value": "@_ep_1_flux_err_167",
 				"unit": "erg/cm2/sec"
 				}
 			}
+		},
+		{
+			"measure": "HardnessRatio",
+			"ucd": "phot.flux",
+			"semantic": "computed",
+			"frame": {
+				"frame": ["EB1", "EB2", "HR1"]
+			},
+			"coordinate": {
+				"value": "@_ep_hr1_302"
+			},
+			"errors": {
+				"random": {
+					"value": "@_ep_hr1_err_303"
+				}
+			}
+		},
+		{
+			"measure": "GenericMeasure",
+			"ucd": "time.duration;obs.exposure",
+			"semantic": "obs-parameter",
+			"coordinate": {
+				"value": "@_pn_1_exp_334",
+				"unit": "sec"
+			}
+		},
+		{
+			"measure": "DetectionFlag",
+			"ucd": "meta.code.qual",
+			"semantic": "computed",
+			"frame": {
+				"frame": "DETFLAG"
+			},
+			"coordinate": {
+				"value": "@_sum_flag_394"
+			}
 		}
+
 	],
 	"associatedData": {
 		
