--- a/python_workflow/data/product_configs/4xmm.mango.config.json
+++ b/python_workflow/data/product_configs/4xmm.mango.config.json
@@ -4,7 +4,8 @@
 		{
 			"measure": "LonLatSkyPosition",
 			"ucd": "pos",
-			"semantic": "corrected",
+			"semantic": "#corrected",
+			"description": "Corrected position",
 			"frame": {
 				"frame": "ICRS",
 				"equinox": null
@@ -28,7 +29,8 @@
 		{
 			"measure": "Photometry",
 			"ucd": "phot.flux",
-			"semantic": "corrected",
+			"semantic": "#corrected",
+			"description": "Flux in Energy band 1 0.2-0.5KeV (cameras merged)",
 			"frame": {
 				"frame": "EB1"
 			},
@@ -45,8 +47,9 @@
 		},
 		{
 			"measure": "HardnessRatio",
+			"description": "Hardness Ration in Energy band 1 0.2-0.5KeV (cameras merged)",
 			"ucd": "phot.flux",
-			"semantic": "computed",
+			"semantic": "#computed",
 			"frame": {
 				"frame": ["EB1", "EB2", "HR1"]
 			},
@@ -62,7 +65,8 @@
 		{
 			"measure": "GenericMeasure",
 			"ucd": "time.duration;obs.exposure",
-			"semantic": "obs-parameter",
+			"description": "PN exposure time in Energy band 1 0.2-0.5KeV",
+			"semantic": "#obs-parameter",
 			"coordinate": {
 				"value": "@_pn_1_exp_334",
 				"unit": "sec"
@@ -71,7 +75,8 @@
 		{
 			"measure": "DetectionFlag",
 			"ucd": "meta.code.qual",
-			"semantic": "computed",
+			"semantic": "#computed",
+			"description": "Summary quality flag",
 			"frame": {
 				"frame": "DETFLAG"
 			},
