--- a/doc/Makefile.template
+++ b/doc/Makefile.template
@@ -1,20 +1,20 @@
 # ivoatex Makefile.  The ivoatex/README for the targets available.
 
 # short name of your document (edit $DOCNAME.tex; would be like RegTAP)
-DOCNAME = vodml-lite-mapping
+DOCNAME = ????
 
 # count up; you probably do not want to bother with versions <1.0
 DOCVERSION = 1.0
 
 # Publication date, ISO format; update manually for "releases"
-DOCDATE = 2020-07-15
+DOCDATE = ???
 
 # What is it you're writing: NOTE, WD, PR, REC, PEN, or EN
-DOCTYPE = WD
+DOCTYPE = ???
 
 # An e-mail address of the person doing the submission to the document
 # repository (can be empty until a make upload is being made)
-AUTHOR_EMAIL=laurent.michel@atro.unistra.fr
+AUTHOR_EMAIL=???
 
 # Source files for the TeX document (but the main file must always
 # be called $(DOCNAME).tex
